--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
   "homepage": "https://github.com/MGMKLML/backend-project-lvl3#readme",
   "dependencies": {
     "@types/jest": "^26.0.23",
+    "axios": "^0.21.1",
+    "commander": "^7.2.0",
     "eslint": "^7.27.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.3",
     "jest": "^27.0.2"
   },
   "devDependencies": {
-    "eslint-plugin-jest": "^24.3.6"
+    "eslint-plugin-jest": "^24.3.6",
+    "nock": "^13.0.11"
   }
 }
