--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@types/jest": "^26.0.23",
     "axios": "^0.21.1",
+    "cheerio": "^1.0.0-rc.10",
     "commander": "^7.2.0",
     "eslint": "^7.27.0",
     "eslint-config-airbnb-base": "^14.2.1",
