--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "eslint": "^7.27.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.3",
-    "jest": "^27.0.2"
+    "jest": "^27.0.2",
+    "prettier": "^2.4.1"
   },
   "devDependencies": {
     "eslint-plugin-jest": "^24.3.6",
