--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "homepage": "https://github.com/MGMKLML/backend-project-lvl3#readme",
   "dependencies": {
     "@types/jest": "^26.0.23",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
+    "axios-debug-log": "^0.8.4",
     "cheerio": "^1.0.0-rc.10",
     "commander": "^7.2.0",
+    "debug": "^4.3.2",
     "eslint": "^7.27.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.3",
