--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.3",
     "jest": "^27.0.2",
+    "listr": "^0.14.3",
     "lodash": "^4.17.21",
     "prettier": "^2.4.1"
   },
